# extensions

./: .gitignore  .prettierrc  CLAUDE.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pyproject.toml  radon.cfg
crates/stt/: Cargo.toml
crates/stt/src/: chunker.rs  lib.rs  whisper.rs
crates/stt/tests/: mod.rs
crates/ui/: Cargo.toml  build.rs
crates/ui/src/: main.rs  python.rs
crates/ui/ui/: panel.slint
docs/: RxPy.md  async-to-observable.md  dual-model-stt.md  openapi.documented.yml  recorder-refactor.md
python/audio/: __init__.py  config.py  exceptions.py  extract.py  rechunk.py  silero.py  source.py  stream.py  stt.py  types.py  vad.py  whisper.py  window.py
python/audio/_stt/: Cargo.toml  __init__.pyi
python/audio/_stt/src/: lib.rs
python/audio/tests/: __init__.py  test_rechunk.py  test_streams.py  test_stt.py  test_vad.py  test_whisper.py  test_window.py  update_fixtures.py
python/scripts/: download_whisper.py  listen_mic.py
python/streams/: __init__.py  buffer_with_count_or_complete.py  filter_instance.py  filter_instance_start_with.py  from_async.py  from_async_threadsafe.py  from_thread.py  switch_resource.py  take_while_inclusive.py  utils.py
python/streams/tests/: __init__.py  test_buffer_with_count_or_complete.py  test_filter_instance.py  test_filter_instance_start_with.py  test_from_async.py  test_from_async_threadsafe.py  test_from_thread.py  test_switch_resource.py  test_take_while_inclusive.py
python/tests/: test_whisper_integration.py
