[project]
name = "extensions"
version = "0.0.1"
description = "Audio processing backend"
requires-python = ">=3.12"
dependencies = [
    "mypy>=1.18.2",
    "numpy>=2.3.5",
    "pydub>=0.25.1",
    "reactivex>=4.0.0",
    "silero-vad-lite>=0.2.1",
    "sounddevice>=0.5.3",
    "types-yt-dlp>=2025.11.12.20251115",
    "yt-dlp>=2024.0.0",
]

[project.optional-dependencies]
neovim = [
    "pynvim>=0.5.0",
    "jupyter_client>=8.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
fix = true

[tool.ruff.lint]
# Enable recommended rules + type checking rules
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
]

# Mypy configuration
[tool.mypy]
python_version = "3.12"
mypy_path = "python"
packages = ["audio", "streams"]
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
extra_checks = true
exclude = [
    "^build/",
    "^dist/",
    "^\\.venv/",
]

[[tool.mypy.overrides]]
module = ["pytest", "reactivex.testing.marbles", "silero_vad_lite"]
ignore_missing_imports = true



[tool.pyright]
pythonVersion = "3.12"
include = ["python"]
extraPaths = ["python"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
reportMissingImports = "warning"
reportUnknownMemberType = false

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.8.0",
]

[tool.maturin]
manifest-path = "python/audio/_stt/Cargo.toml"
python-source = "python"
module-name = "audio._stt"

# Coverage configuration
[tool.coverage.run]
source = ["python/"]
concurrency = ["thread", "greenlet"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

