[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

[[bin]]
name = "ui"
path = "src/main.rs"

[dependencies]
slint = "1.9"
pyo3 = { version = "0.22", features = ["auto-initialize"] }
thiserror = "2"

[build-dependencies]
slint-build = "1.9"
pyo3-build-config = "0.22"
